# invoice-processing-project

./: .gitignore  CLAUDE.md  Future_Scope.md  README.md  understanding.md
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt  run_pipeline.py  start.sh
backend/api/: db.py  main.py  schemas.py
backend/pipeline/: graph.py  models.py  state.py
backend/pipeline/nodes/: decision.py  extraction.py  matching.py  validation.py
backend/pipeline/utils/: pdf_parser.py  tolerance.py
backend/test_data/: po_dataset.json
backend/tests/: test_pipeline.py
context-files/: future_scope.md  phase_1.md  phase_2.md  phase_2_extended_testing.md  tech_stack.md
db/: seed.sql
demo data/: README.md  approved_vendors.upload.json  invoice_history.json  invoice_history.upload.json  po_dataset.upload.json  reset.sql  schema.sql
demo_data/: approved_vendors.json  demo_data.md  invoice_history.json  po_dataset.json
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/config/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/runs/: loading.tsx  page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: DecisionBadge.tsx  NavBar.tsx  RunsTable.tsx  Sidebar.tsx  StageCard.tsx
frontend/src/components/layout/: AuthLayoutWrapper.tsx  PageHeader.tsx  Sidebar.tsx  (+1 more)
frontend/src/lib/: api.ts  auth.ts  dateRange.ts  decision.ts
test_data/: approved_vendors.json
(+12 files in other folders)
