[project]
name = "invoice-processing-pipeline"
version = "0.1.0"
description = "Four-stage LangGraph invoice processing pipeline (PS-1 case study)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "supabase>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
pdf-gen = [
    "reportlab>=4.0.0",  # only needed if regenerating test invoice PDFs
]

[tool.setuptools.packages.find]
include = ["pipeline*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
